# ansible-policy

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  galaxy_data.json  pyproject.toml
ansible_gatekeeper/: __version__.py  eval.py  eval_policy.py  event_handler.py  models.py  rego_data.py  rest_hook.py  runner.py  utils.py
ansible_gatekeeper/policybook/: README.md  condition_parser.py  json_generator.py  policy_parser.py  policybook_models.py  rego_model.py  rego_templates.py  sample_ast.yml  sample_ast_edit.yml  sample_policybook.yml  sample_policybook_org.yml  sample_rego.rego  to_ast.py  to_rego.py  transpiler.py
ansible_gatekeeper/policybook/examples/: Check_for_package_name.rego  ansible-gatekeeper.cfg  ast_check_pkg.yml  output_rego.rego  policybook_check_collection.yml  sample_ast.yml  sample_ast_edit.yml  sample_policybook_org.yml  sample_rego.rego
ansible_gatekeeper/policybook/examples/output/: Check_for_mysql_package_installation.rego  Check_for_using_module.rego
ansible_gatekeeper/policybook/examples/project/: playbook.yml
ansible_gatekeeper/policybook/image/: flow.drawio
ansible_gatekeeper/rego/: utils.rego
ansible_policy/: eval_policy.py  models.py  rego_data.py  utils.py
ansible_policy/policybook/: README.md  condition_parser.py  expressioin_transpiler.py  json_generator.py  policy_parser.py  policybook_models.py  rego_model.py  rego_templates.py  to_ast.py  transpiler.py
ansible_policy/policybook/image/: flow.drawio
ansible_policy/policybook/tests/: test_e2e.py  test_transpiler.py
ansible_policy/policybook/tests/asts/: policies_with_multiple_conditions4.yml
ansible_policy/policybook/tests/policybooks/: policies_with_multiple_conditions2.yml  policies_with_multiple_conditions4.yml
ansible_policy/rego/: utils.rego
collections/gatekeeper.rego/: MANIFEST.json  README.md
collections/gatekeeper.rego/examples/: check_requirements.yml
collections/gatekeeper.rego/examples/check_become/: check_become.generated.rego  check_become.yml
collections/gatekeeper.rego/examples/check_variables/: check_database_name.generated.rego  check_database_name.yml
collections/gatekeeper.rego/plugins/modules/: check.py  def_func.py  def_rule.py  def_vars.py  eval.py  filter.py  rule.py  run_eval.py  transform.py  vars.py
examples/: ansible-gatekeeper.cfg  ansible-policy.cfg  ansible-runner-jobdata  sample1.rego  sample_rest_data.json
examples/backup/develop/firewall_role/: requirements.yml
examples/backup/runtime/: policy_use_allowed_dbs_only.rego
examples/check_event/: event_handler.py  event_watcher.py
examples/check_event/navigator/: .gitignore  ansible-navigator.yml
examples/check_event/navigator/custom_ee/: ansible.cfg  custom_ee.yml
examples/check_event/navigator/playbook/: test.yml
examples/check_project/: playbook.yml  playbook_mongodb.yml
examples/check_project/policies/: check_collection.yml  check_pkg.yml
examples/check_rest/: rest_hook.py
examples/check_rest/policies/: check_rest_username.yml
examples/collection_policies/policies.community_mongodb/: README.md  galaxy.yml
examples/collection_policies/policies.community_mongodb/policies/: check_database_name.yml  check_database_name_generated.rego
examples/develop/: policy_satisfy_requirements.rego
examples/develop/firewall_role/tasks/: main.yml
examples/old/collection_policies/policies.community_mongodb/: MANIFEST.json
examples/org_wide_policies/compliance/ast/: check_become.yml  check_become_play.yml
examples/org_wide_policies/compliance/policies/: Check_for_collection_name.rego  Check_for_package_name.rego  (+4 more)
examples/project/: playbook.yml
examples/runtime/: policy.rego  policy_use_allowed_dbs_only.rego
examples/sample-project/: playbook.yml
examples/sample1/env/: extravars
examples/sample1/project/: playbook.yml  vars.yml
examples/sample_policies/policies/: check_changed_event.yml
tests/unit/: test_ast.py  test_policybook_e2e.py  test_transpiler.py
tests/unit/asts/: policies_with_multiple_conditions.yml  policies_with_multiple_conditions2.yml  policies_with_multiple_conditions3.yml
tests/unit/policybooks/: policies_with_multiple_conditions.yml  policies_with_multiple_conditions3.yml  policies_with_multiple_conditions4.yml
(+142 files in other folders)
