[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-policy-eval"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ansible-content-capture@git+https://github.com/ansible/ansible-content-capture",
    "ansible-rulebook==1.0.4",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "ansible_policy.__version__.__version__"}

[project.scripts]
ansible-policy = "ansible_policy.eval_policy:main"

[tool.setuptools]
py-modules = ["ansible_policy"]
packages = ["ansible_policy"]

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, W503,"
max-line-length = 150
