[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-policy-eval"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.11"
keywords = ["one", "two"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ansible-core>=2.17.1",
    "ansible-content-capture@git+https://github.com/ansible/ansible-content-capture",
    "ansible-rulebook>=1.0.4",
    "ansible-runner>=2.4.0",

    "aiohttp>=3.9.5",
    "aiosignal>=1.3.1",
    "attrs>=23.2.0",
    "certifi>=2024.6.2",
    "cffi>=1.16.0",
    "charset-normalizer>=3.3.2",
    "cryptography>=42.0.8",
    "docutils>=0.21.2",
    "dpath>=2.2.0",
    "drools-jpy>=0.3.8",
    "filelock>=3.15.1",
    "frozenlist>=1.4.1",
    "gitdb>=4.0.11",
    "idna>=3.7",
    "janus>=1.0.0",
    "Jinja2>=3.1.4",
    "joblib>=1.4.2",
    "jpy>=0.17.0",
    "jsonpickle>=3.2.1",
    "jsonschema>=4.22.0",
    "jsonschema-specifications>=2023.12.1",
    "lockfile>=0.12.2",
    "MarkupSafe>=2.1.5",
    "multidict>=6.0.5",
    "packaging>=24.1",
    "pexpect>=4.9.0",
    "ptyprocess>=0.7.0",
    "pycparser>=2.22",
    "pyparsing>=3.1.2",
    "python-daemon>=3.0.1",
    "PyYAML>=6.0.1",
    "rapidfuzz>=3.9.3",
    "referencing>=0.35.1",
    "requests>=2.32.3",
    "resolvelib>=1.0.1",
    "rpds-py>=0.18.1",
    "ruamel.yaml>=0.18.6",
    "ruamel.yaml.clib>=0.2.8",
    "smmap>=5.0.1",
    "tabulate>=0.9.0",
    "typing_extensions>=4.12.2",
    "urllib3>=2.2.2",
    "watchdog>=4.0.1",
    "websockets>=12.0",
    "yarl>=1.9.4",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "ansible_policy.__version__.__version__"}

[project.scripts]
ansible-policy = "ansible_policy.eval_policy:main"

[tool.setuptools]
py-modules = ["ansible_policy"]
packages = ["ansible_policy"]

[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, W503,"
max-line-length = 150
